--- a/index.html
+++ b/index.html
@@ -7,7 +7,35 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-sdcsd
+<header id="hello">
+    <div class="container">
+        <nav class="navbar" role="navigation">
+        	<div class="navbar-header">
+        		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+        			<span class="sr-only">Toggle navigation</span>
+        			<span class="icon-bar"></span>
+        			<span class="icon-bar"></span>
+        			<span class="icon-bar"></span>
+        		</button>
+        		<a class="navbar-brand" href="#">bouncy</a>
+        	</div>
+
+        	<div class="collapse navbar-collapse navbar-ex1-collapse">
+
+        		<ul class="nav navbar-nav navbar-right">
+        			<li class="active"><a href="#hello">Hello</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+        		</ul>
+        	</div>
+        </nav>
+    </div>
+</header>
+
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 </body>
