--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header id="hello">
-    <div class="container">
+    <div class="container navbar-fixed-top">
         <nav class="navbar" role="navigation">
         	<div class="navbar-header">
         		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -23,7 +23,7 @@
         	<div class="collapse navbar-collapse navbar-ex1-collapse">
 
         		<ul class="nav navbar-nav navbar-right">
-        			<li class="active"><a href="#hello">Hello</a></li>
+        			<li><a href="#hello" class="active">Hello</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Portfolio</a></li>
@@ -33,6 +33,12 @@
         		</ul>
         	</div>
         </nav>
+    </div>
+    <div class="container">
+        <h1 class="text-center">We Are Code Cafe</h1>
+        <p class="text-center">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis <br>
+            praesentium voluptatum</p>
+        <a href="#about" class="read-more"><span class="glyphicon glyphicon-chevron-down"></span></a>
     </div>
 </header>
 
