--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
 <header id="hello">
     <div class="container navbar-fixed-top">
         <nav class="navbar" role="navigation">
-        	<div class="navbar-header">
-        		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-        			<span class="sr-only">Toggle navigation</span>
-        			<span class="icon-bar"></span>
-        			<span class="icon-bar"></span>
-        			<span class="icon-bar"></span>
-        		</button>
-        		<a class="navbar-brand" href="#">bouncy</a>
-        	</div>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">bouncy</a>
+            </div>
 
-        	<div class="collapse navbar-collapse navbar-ex1-collapse">
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
 
-        		<ul class="nav navbar-nav navbar-right">
-        			<li><a href="#hello" class="active">Hello</a></li>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#hello" class="active">Hello</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Team</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>
-        		</ul>
-        	</div>
+                </ul>
+            </div>
         </nav>
     </div>
     <div class="container">
@@ -41,7 +41,25 @@
         <a href="#about" class="read-more"><span class="glyphicon glyphicon-chevron-down"></span></a>
     </div>
 </header>
-
+<section id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-offset-1 col-md-6">
+                <h3>This is Bouncy</h3>
+                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui<br>
+                    blanditiis praesentium voluptatum deleniti atque corrupti quos<br>
+                    dolores et quas molestias excepturi sint occaecati cupiditate non<br>
+                    provident, similique sunt in culpa qui officia deserunt mollitia<br>
+                    animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis<br>
+                    est et expedita distinctio. </p>
+                <a href="#">Read More</a>
+            </div>
+            <div class="col-md-offset-1 col-md-4">
+                <img src="images/phone.jpg" alt="phone">
+            </div>
+        </div>
+    </div>
+</section>
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 </body>
