--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>bouncy</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
@@ -44,20 +45,79 @@
 <section id="about">
     <div class="container">
         <div class="row">
-            <div class="col-md-offset-1 col-md-6">
+            <div class="col-xs-8 col-sm-offset-1 col-sm-6">
                 <h3>This is Bouncy</h3>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui<br>
-                    blanditiis praesentium voluptatum deleniti atque corrupti quos<br>
-                    dolores et quas molestias excepturi sint occaecati cupiditate non<br>
-                    provident, similique sunt in culpa qui officia deserunt mollitia<br>
-                    animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis<br>
+                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                    blanditiis praesentium voluptatum deleniti atque corrupti quos
+                    dolores et quas molestias excepturi sint occaecati cupiditate non
+                    provident, similique sunt in culpa qui officia deserunt mollitia
+                    animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis
                     est et expedita distinctio. </p>
                 <a href="#">Read More</a>
             </div>
-            <div class="col-md-offset-1 col-md-4">
-                <img src="images/phone.jpg" alt="phone">
+            <div class="col-xs-4 col-sm-offset-1 col-sm-4">
+                <img class="img-responsive" src="images/phone.jpg" alt="phone">
             </div>
         </div>
+    </div>
+</section>
+<section class="details-about">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="text-center">details about bouncy</h3>
+                <p class="text-center under-header">At vero eos et accusamus et iusto odio dignissimos ducimus qui <br>
+                    blanditiis
+                    praesentium</p>
+                <ul class="text-center">
+                    <li class="active">
+                        <a href="#"><img src="images/heart.png" alt="heart"></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="images/mouse.png" alt="mouse"></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="images/lamp.png" alt="lamp"></a>
+                    </li>
+                </ul>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h5>Creative Ideas</h5>
+                    </div>
+                    <div class="col-sm-4">
+                        <p class="creative-ideas">At <span class="green-b">vero</span> eos et accusamus et iusto odio dignissimos
+                            <span class="black-b">ducimus</span> qui
+                            blanditiis praesentium voluptatum deleniti atque corrupti quos dolores</p>
+                    </div>
+                    <div class="col-sm-7 col-sm-offset-1">
+                        <p class="creative-ideas">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                            voluptatum deleniti atque <span class="black-b">corrupti quos</span> dolores et quas
+                            molestias <span class="green-b">excepturi</span> sint occaecati
+                            cupiditate non provident, <span class="black-b">similique</span> sunt in culpa qui officia
+                            deserunt mollitia animi, id
+                            est laborum et dolorum fuga. Et harum quidem r</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="featured-project">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="text-center">FEATURED PROJECTS</h3>
+                <p class="text-center under-header">At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                    blanditiis <br> praesentium</p>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="featured-work">
+        <img src="images/featured1.jpg" alt="work1">
+        <img src="images/featured2.jpg" alt="work2">
+        <img src="images/featured3.jpg" alt="work3">
     </div>
 </section>
 <script src="bower_components/jquery/dist/jquery.js"></script>
