refactoring flex boxes

--- a/index.html
+++ b/index.html
@@ -115,9 +115,18 @@
 </section>
 <section>
     <div class="featured-work">
-        <img src="images/featured1.jpg" alt="work1">
-        <img src="images/featured2.jpg" alt="work2">
-        <img src="images/featured3.jpg" alt="work3">
+        <div>
+          <img src="images/featured1.jpg" alt="work1">
+          <a href="#">textarea</a>
+        </div>
+        <div>
+          <img src="images/featured2.jpg" alt="work2">
+          <a href="#">textarea</a>
+        </div>
+        <div>
+          <img src="images/featured3.jpg" alt="work3">
+          <a href="#">textarea</a>
+        </div>
     </div>
 </section>
 <script src="bower_components/jquery/dist/jquery.js"></script>
