start section "services"

--- a/index.html
+++ b/index.html
@@ -85,12 +85,14 @@
                         <h5>Creative Ideas</h5>
                     </div>
                     <div class="col-sm-4">
-                        <p class="creative-ideas">At <span class="green-b">vero</span> eos et accusamus et iusto odio dignissimos
+                        <p class="creative-ideas">At <span class="green-b">vero</span> eos et accusamus et iusto odio
+                            dignissimos
                             <span class="black-b">ducimus</span> qui
                             blanditiis praesentium voluptatum deleniti atque corrupti quos dolores</p>
                     </div>
                     <div class="col-sm-7 col-sm-offset-1">
-                        <p class="creative-ideas">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                        <p class="creative-ideas">At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                            blanditiis praesentium
                             voluptatum deleniti atque <span class="black-b">corrupti quos</span> dolores et quas
                             molestias <span class="green-b">excepturi</span> sint occaecati
                             cupiditate non provident, <span class="black-b">similique</span> sunt in culpa qui officia
@@ -102,33 +104,71 @@
         </div>
     </div>
 </section>
-<section class="featured-project">
+<div>
+    <section class="featured-project">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h3 class="text-center">FEATURED PROJECTS</h3>
+                    <p class="text-center under-header">At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                        blanditiis <br> praesentium</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="featured-work">
+            <div>
+                <a href="#">
+                    <img src="images/featured1.jpg" alt="work1">
+              <span>
+                  <span>Lorem ipsum.</span>
+              </span>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <img src="images/featured2.jpg" alt="work1">
+              <span>
+                  <span>vintage</span>
+              </span>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <img src="images/featured3.jpg" alt="work1">
+              <span>
+                  <span>branding</span>
+              </span>
+                </a>
+            </div>
+        </div>
+    </section>
+    <section class="featured-footer">
+        <div class="container">
+            <div class="featured-footer-flex">
+                <div>
+                    At vero eos et <span class="white-b">accusamus</span> et iusto odio dignissimos ducimus
+                    qui blanditiis
+                </div>
+                <a href="#">Submit Now</a>
+            </div>
+        </div>
+    </section>
+</div>
+<section id="services">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="text-center">FEATURED PROJECTS</h3>
-                <p class="text-center under-header">At vero eos et accusamus et iusto odio dignissimos ducimus qui
-                    blanditiis <br> praesentium</p>
+                <h3 class="text-center">Our Services</h3>
+                <p class="under-header text-center">At vero eos et accusamus et iusto odio dignissimos ducimus qui <br>
+                    blanditiis praesentium</p>
             </div>
         </div>
     </div>
 </section>
-<section>
-    <div class="featured-work">
-        <div>
-          <img src="images/featured1.jpg" alt="work1">
-          <a href="#">textarea</a>
-        </div>
-        <div>
-          <img src="images/featured2.jpg" alt="work2">
-          <a href="#">textarea</a>
-        </div>
-        <div>
-          <img src="images/featured3.jpg" alt="work3">
-          <a href="#">textarea</a>
-        </div>
-    </div>
-</section>
+
+
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 </body>
